tests/NormalTests/paczka1/small_fuzzy/53119700.err
Error in line 4: S350 S350 66,4
Error in line 8: z85AF S984 76,5
